[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/option_bg_white.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/option_bg_grey.png" type="Texture" id=2]
[ext_resource path="res://scenes/AnimMenuSelection/AnimMenuSelection.gd" type="Script" id=3]
[ext_resource path="res://assets/Montserrat/Montserrat-Light.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 4 )

[node name="AnimMenuSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
labelText = "CASUAL"

[node name="BelowTexture" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BelowTexture"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -128.081
margin_top = -24.6396
margin_right = -29.081
margin_bottom = 33.3604
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BelowTexture/VBoxContainer"]
margin_right = 99.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "High Score"
align = 1
valign = 1

[node name="Label2" type="Label" parent="BelowTexture/VBoxContainer"]
margin_top = 27.0
margin_right = 99.0
margin_bottom = 41.0
text = "20"
align = 1
valign = 1

[node name="AboveTexture" type="TextureRect" parent="BelowTexture"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BelowTexture/AboveTexture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.5
margin_top = -13.0
margin_right = 72.5
margin_bottom = 13.0
rect_scale = Vector2( 1.3, 1 )
text = "CASUAL Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="BelowTexture"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.36035
margin_top = -1.36038
margin_right = 1.36035
margin_bottom = -1.36038
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="button_down" from="BelowTexture/TextureButton" to="." method="_on_TextureButton_button_down"]
